--- a/remotion/package.json
+++ b/remotion/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.3",
     "@remotion/bundler": "4.0.242",
     "@remotion/cli": "4.0.242",
     "@remotion/google-fonts": "4.0.242",
@@ -23,6 +24,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remotion": "4.0.242",
+    "postprocessing": "^6.36.4",
     "three": "^0.170.0",
     "zod": "3.22.4",
     "zustand": "^3.7.2"
