--- a/remotion/package.json
+++ b/remotion/package.json
@@ -12,6 +12,9 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/jetbrains-mono": "^5.2.8",
+    "@fontsource/space-grotesk": "^5.2.10",
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.15.19",
     "@react-three/postprocessing": "^2.16.3",
@@ -21,10 +24,10 @@
     "@remotion/renderer": "4.0.242",
     "@remotion/three": "4.0.242",
     "@remotion/transitions": "4.0.242",
+    "postprocessing": "^6.36.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remotion": "4.0.242",
-    "postprocessing": "^6.36.4",
     "three": "^0.170.0",
     "zod": "3.22.4",
     "zustand": "^3.7.2"
